--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,34 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Cost Consultants
+    meta(charset='utf-8')
+    meta(name='description', content='')
+    meta(name='viewport', content="initial-scale=1, maximum-scale=1, user-scalable=no")
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css',
+      integrity='sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==', crossorigin='anonymous')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic')
+    link(rel='stylesheet', href='/javascripts/vendor/angular-material/angular-material.css')
+    link(rel='stylesheet', href='/javascripts/vendor/hover/css/hover.css')
+    link(rel='stylesheet', href='dist/stylesheets/main.min.css')
   body
-    block content
+    .container
+      include ./partials/navbar.jade
+    include ./partials/carousel.jade
+
+
+
+
+
+
+
+  script(type="text/javascript" src='https://code.jquery.com/jquery-2.1.4.min.js')
+  script(type="text/javascript" src='/javascripts/vendor/angular/angular.js')
+  script(type='text/javascript' src='/javascripts/vendor/angular-messages/angular-messages.min.js')
+  script(type="text/javascript" src='/javascripts/vendor/angular-resource/angular-resource.js')
+  script(type="text/javascript" src='/javascripts/vendor/angular-animate/angular-animate.min.js')
+  script(type="text/javascript" src='/javascripts/vendor/angular-aria/angular-aria.min.js')
+  script(type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js')
+  script(type="text/javascript" src='/javascripts/vendor/angular-ui-router/release/angular-ui-router.min.js')
+  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js', integrity='sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==', crossorigin='anonymous')
+  script(type="text/javascript" src='/dist/javascripts/indexFinal.min.js')
