--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -7,27 +7,26 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='#') COST Consul.
+      a.navbar-brand() COST Consul.
     // Collect the nav links, forms, and other content for toggling
     #navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         li.active
-          a(href='#')
-            | Link
+          a(ui-sref='/') Home
             span.sr-only (current)
         li
-          a(href='#') Link
+          a(ui-sref='about') About
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
             | Dropdown
             span.caret
           ul.dropdown-menu
             li
-              a(href='#') Action
+              a(ui-sref='info') Information
             li
-              a(href='#') Another action
+              a(ui-sref='about') About
             li
-              a(href='#') Something else here
+              a(ui-sref='contact') Contact Us
             li.divider(role='separator')
             li
               a(href='#') Separated link
