--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,44 +1,1 @@
-
-#myCarousel.carousel.slide(data-ride='carousel')
-  // Indicators
-  ol.carousel-indicators
-    li.active(data-target='#myCarousel', data-slide-to='0')
-    li(data-target='#myCarousel', data-slide-to='1')
-    li(data-target='#myCarousel', data-slide-to='2')
-  .carousel-inner(role='listbox')
-    .item.active
-      img.first-slide(src='', alt='First slide')
-      .container
-        .carousel-caption
-          h1 Example headline.
-          p
-            | Note: If you're viewing this page via a
-            code file://
-            |  URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.
-          p
-            a.btn.btn-lg.btn-primary(href='#', role='button') Sign up today
-    .item
-      img.second-slide(src='', alt='Second slide')
-      .container
-        .carousel-caption
-          h1 Another example headline.
-          p
-            | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-          p
-            a.btn.btn-lg.btn-primary(href='#', role='button') Learn more
-    .item
-      img.third-slide(src='', alt='Third slide')
-      .container
-        .carousel-caption
-          h1 One more for good measure.
-          p
-            | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-          p
-            a.btn.btn-lg.btn-primary(href='#', role='button') Browse gallery
-  a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
-    span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
-    span.sr-only Previous
-  a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
-    span.glyphicon.glyphicon-chevron-right(aria-hidden='true')
-    span.sr-only Next
-// /.carousel
+p Home page
