Big layout update. New cards for features and marketing section. Changed nav layout

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -1,5 +1,37 @@
-#navbar
-  .container-fluid
+html, body
+  font-size: 18px
+  position: fixed
+  width: 100%
+  overflow: hidden
 
-  .navbar-brand
-    padding-top: 35px
+hr
+  border-bottom: 1px solid #ba68c8
+
+#mainView
+  max-height: 100vh
+  min-height: 100vh
+  width: 100%
+  overflow: scroll
+  padding-bottom: 75px
+
+#mainContainer
+  overflow: hidden
+
+#leftNav
+  .md-button
+    margin: 8px
+    padding: 10px
+  .active
+    background-color: #ba68c8
+    color: white
+
+#homeLayout
+  md-card
+    min-height: 400px
+    max-height: 400px
+
+#about
+  .md-card-image
+    margin: auto
+    height: 200px
+    width: auto
