--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -1,11 +1,5 @@
 div(layout='row')
-  md-toolbar.md-whiteframe-z1(layout='row')
-    md-button#leftToggle(aria-label='Show Nav', ng-controller="LeftNavCtrl", ng-click='toggleSidenav()')
-      md-icon(md-svg-icon='images/angular-material/menu.svg')
-    span(flex='')
-    //md-button(aria-label='Show User List', ng-controller='RightNavCtrl', ng-click='toggleSidenav()' style='padding-top: 12px')
-      ng-md-icon(icon="people" style="fill: white" size="30")
-  md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id='left', layout='column')
+  md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id='left', layout='column' md-is-locked-open="$mdMedia('gt-md')")
     md-toolbar.md-whiteframe-z1.md-tall
       span(flex='')
       h2.md-toolbar-tools.md-toolbar-tools-bottom
@@ -23,3 +17,10 @@ div(layout='row')
       md-list-item
         md-button.md-button(ui-sref='info' flex='' ui-sref-active='active' ng-click='close()')
           h3 Information
+  div.md-whiteframe-z2(flex='', layout='column', tabindex='-1', role='main')
+    md-toolbar.md-whiteframe-z1(layout='row')
+      md-button#leftToggle(aria-label='Show Nav',  ng-controller="LeftNavCtrl", ng-click='toggleSidenav()')
+        md-icon(md-svg-icon='images/angular-material/menu.svg')
+      //md-button(aria-label='Show User List', ng-controller='RightNavCtrl', ng-click='toggleSidenav()' style='padding-top: 12px')
+        ng-md-icon(icon="people" style="fill: white" size="30")
+
