--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,18 +1,18 @@
 div()
-  div#homeCarousel(layout='column')
+  div(layout='column')
     //md-content
       md-card
         h1(style='text-align: center;') Big Callout
     md-content
       md-card
         md-card-content
-          div(style='min-height: 450px;' ng-controller='CarouselCtrl')
+          div#homeCarousel(ng-controller='CarouselCtrl')
             uib-carousel(interval='myInterval', no-wrap='noWrapSlides')
               uib-slide(ng-repeat='slide in slides', active='slide.active')
                 img(ng-src='{{slide.image}}', style='margin:auto;')
-                .carousel-caption
+                md-content.carousel-caption
                   h4 Slide {{$index}}
-                  p {{slide.text}}
+                  h1 {{slide.text}}
   br
   div#homeLayout()
     md-content
@@ -35,7 +35,7 @@ div()
           md-card-content
             hr
             p Hello world
-      br
+  br
   div#about(layout='column' flex)
     md-content
       md-toolbar.md-primary
