Added contact api model, mongoose as well as setup form

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -35,24 +35,24 @@ hr
     max-height: 400px
 
 #homeCarousel
-  min-height: 600px
-  max-height: 600px
+  min-height: 700px
+  max-height: 700px
 
   uib-carousel, uib-slide
-    min-height: 600px
-    max-height: 600px
+    min-height: 700px
+    max-height: 700px
 
   .carousel-caption
-    margin-bottom: 50px
+    margin-bottom: 400px
     background-color: rgba(#000, .5)
     
     h1
       color: white
-      
+
   img
     margin: auto
     min-width: 100%
-    max-height: 600px
+    max-height: 700px
     display: block
 
 #about
@@ -60,3 +60,7 @@ hr
     margin: auto
     height: 200px
     width: auto
+
+
+/* ------------ Contact Page ---------- */
+
