Fixed carousel with same size images

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -35,15 +35,15 @@ hr
     max-height: 400px
 
 #homeCarousel
-  min-height: 700px
-  max-height: 700px
+  //width: 100%
+  //min-height: 700px
+  //max-height: 700px
 
   uib-carousel, uib-slide
-    min-height: 700px
-    max-height: 700px
+    //width: 100%
 
   .carousel-caption
-    margin-bottom: 400px
+    //margin-bottom: 400px
     background-color: rgba(#000, .5)
     
     h1
@@ -51,9 +51,10 @@ hr
 
   img
     margin: auto
-    min-width: 100%
-    max-height: 700px
+    width: 100%
+    height: auto
     display: block
+
 
 #about
   .md-card-image
