Initial mockup of about page

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,1 +1,17 @@
-h1 This is the About page
+div#about()
+  md-content
+    md-card
+      md-card-content
+        div(layout-gt-md='row')
+          div(style='margin: auto;' flex='40')
+            img(src='images/black-leather-texture-hd-free-wallpaper_1242103205.jpg' style='height: auto; max-width: 340px; display: block; margin: auto;')
+          div(style='border-left: 1px solid black; padding-left: 10px;' flex)
+            md-content
+              p.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in neque nulla. Quisque quis maximus tortor. Nunc vitae consectetur lectus, sed rutrum libero. Pellentesque lacinia mauris nibh, non blandit arcu ornare eu. Curabitur congue sit amet tortor vel elementum. Quisque bibendum pellentesque ante, a accumsan dui malesuada ut. Nullam nec dolor elit. In efficitur, arcu eu mollis fringilla, purus sapien lacinia ante, a ullamcorper magna nulla sit amet quam.
+                Sed nec tortor ut mi posuere finibus. Duis odio nibh, congue vel turpis in, lobortis lacinia nisl. Maecenas risus tellus, finibus ut facilisis non, venenatis aliquam augue. Curabitur fringilla et purus eu efficitur. Quisque ut mattis justo. Nunc diam massa, posuere et dui et, dapibus posuere nisi. Nam commodo suscipit est, sed semper augue efficitur sed. Sed auctor quis dolor id rutrum.
+                Nulla id venenatis nulla, eget ultricies dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis volutpat dignissim lacus vel tempor. Ut dignissim consectetur nisi non rhoncus. Curabitur volutpat volutpat neque non mollis. Nam accumsan vitae metus vel dapibus. In convallis eros a neque semper vestibulum. In hac habitasse platea dictumst.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in neque nulla. Quisque quis maximus tortor. Nunc vitae consectetur lectus, sed rutrum libero. Pellentesque lacinia mauris nibh, non blandit arcu ornare eu. Curabitur congue sit amet tortor vel elementum. Quisque bibendum pellentesque ante, a accumsan dui malesuada ut. Nullam nec dolor elit. In efficitur, arcu eu mollis fringilla, purus sapien lacinia ante, a ullamcorper magna nulla sit amet quam.
+                Sed nec tortor ut mi posuere finibus. Duis odio nibh, congue vel turpis in, lobortis lacinia nisl. Maecenas risus tellus, finibus ut facilisis non, venenatis aliquam augue. Curabitur fringilla et purus eu efficitur. Quisque ut mattis justo. Nunc diam massa, posuere et dui et, dapibus posuere nisi. Nam commodo suscipit est, sed semper augue efficitur sed. Sed auctor quis dolor id rutrum.
+                Nulla id venenatis nulla, eget ultricies dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis volutpat dignissim lacus vel tempor. Ut dignissim consectetur nisi non rhoncus. Curabitur volutpat volutpat neque non mollis. Nam accumsan vitae metus vel dapibus. In convallis eros a neque semper vestibulum. In hac habitasse platea dictumst
+
