--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -6,7 +6,7 @@ div(ng-controller="ContactCtrl")
         hr
         h4 Please read and fill out the contact form below.
         div()
-          form( name='contactForm' role="form" ng-submit="saveContact()")
+          form#contact( name='contactForm' role="form" ng-submit="saveContact()")
             md-content
               div(layout='row' layout-margin layout-padding)
                 div(flex='50' layout='column')
@@ -62,6 +62,6 @@ div(ng-controller="ContactCtrl")
                   br
               md-content
                 h4 Please select a date you would like for customer service to contact you.
-                md-datepicker(ng-model='contact.date' md-placeholder='Enter Date' required)
+                md-datepicker(ng-model='contact.date' md-placeholder='Enter Date')
               br
-              md-button.md-raised.md-accent(type = "submit" ng-disabled='contactForm.$invalid') Submit
+              md-button.md-raised.md-accent#submitBtn(type = "submit" ng-disabled='contactForm.$invalid') Submit
