Started on info page

--- a/views/partials/info.jade
+++ b/views/partials/info.jade
@@ -1,1 +1,18 @@
-h1 This is the info page
+div()
+  md-content
+    div()
+      md-card
+        md-card-content
+          h1 C
+    div()
+      md-card
+        md-card-content
+          h1 O
+    div()
+      md-card
+        md-card-content
+          h1 S
+    div()
+      md-card
+        md-card-content
+          h1 T
